[gd_scene load_steps=2 format=3 uid="uid://bvqf8k7m3tn4p"]

[ext_resource type="Script" path="res://scripts/ui/FocusModeRollPanel.gd" id="1"]

[node name="FocusModeRollPanel" type="PanelContainer"]
custom_minimum_size = Vector2(250, 300)
offset_right = 250.0
offset_bottom = 300.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PilotName" type="Label" parent="VBox"]
layout_mode = 2
text = "Pilot Name"
horizontal_alignment = 1

[node name="SectorInfo" type="Label" parent="VBox"]
layout_mode = 2
text = "Sector: Name (STAT)"
horizontal_alignment = 1

[node name="PilotInfo" type="Label" parent="VBox"]
layout_mode = 2
text = "Position: X | Status: Y"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="RollContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="D20Result" type="Label" parent="VBox/RollContainer"]
layout_mode = 2
text = "d20 Roll: 0"

[node name="StatBonus" type="Label" parent="VBox/RollContainer"]
layout_mode = 2
text = "Stat: +0"

[node name="ModifiersContainer" type="VBoxContainer" parent="VBox/RollContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBox/RollContainer"]
layout_mode = 2

[node name="TotalResult" type="Label" parent="VBox/RollContainer"]
layout_mode = 2
text = "Total: 0"
horizontal_alignment = 1

[node name="TierResult" type="Label" parent="VBox/RollContainer"]
layout_mode = 2
text = "Result: GREY"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="MovementResult" type="Label" parent="VBox"]
layout_mode = 2
text = "Movement: 0 gaps"
horizontal_alignment = 1
